# Jupyter_AI_DataAnalyze

./: .env.example  .gitignore  DELIVERY.md  IMPROVEMENTS_2025-12-21.md  PANEL_MIGRATION.md  PHASE1_FINAL_SUMMARY.md  PHASE1_SUMMARY.md  PROJECT.md  QUICKFIX.md  QUICK_REFERENCE.md  README.md  UPDATES_v2.1.md  pyproject.toml  start.sh  start_jupyter.bat
config/: __init__.py  settings.py
docs/: AI_PROMPT_GUIDE.md  BREW_CHINA_MIRROR.md  HOW_TO_USE_DOCS.md  INTERACTIVE_SHARING.md  MULTIPLE_FILES_GUIDE.md  PANEL_QUICKSTART.md  PANEL_WIDTH_FIX.md  QUICKSTART_GUIDE.md  SHARING_GUIDE.md  STEP4_OPTIMIZATION.md  STEP4_VERIFICATION.md  SYNC_GUIDE.md  WINDOWS_CHART_FIX.md  WINDOWS_GUIDE.md  WORKFLOW_CLARIFICATION.md
docs/ai_context/: AI_QUICK_REFERENCE.md  (+3 more)
examples/: auto_file_search.py  computed_dimensions.py
notebooks/: HOW_TO_RUN_ANALYSIS.md  README.md  analysis_premium_loss_ratio_5years.py  remove_cell_width_limit.py  setup_polars_markdown.py  test_plotly_export.ipynb
scripts/: create_analysis.py  diagnose_dashboard.py  diagnose_windows_charts.py  fix_brew_api.sh  fix_polars_count.py  fix_quick_start_dashboard.py  new_analysis.py  rebuild_notebook.py  regenerate_quick_start.py  reset_quick_start.py  serve_interactive.sh  setup_brew_china_mirror.sh  setup_git_sync.sh  share_analysis.sh  sync_git.ps1  test_step4_from_subdir.py  test_step4_output.py  test_step4_path.py  test_step4_simulation.py  update_metadata_prompts.py  update_notebook.py  update_quick_start.py
src/: Untitled.ipynb  __init__.py  exporter.py  html_exporter.py  session.py
tests/: test_project_root.py
(+44 files in other folders)
